mdapi/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deal Registration</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned to Partner</fullName>
        </values>
        <values>
            <fullName>Calling</fullName>
        </values>
        <values>
            <fullName>Long-term Nurture</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>End User</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned to Partner</fullName>
        </values>
        <values>
            <fullName>Calling</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Long-term Nurture</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Untouched</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned to Partner</fullName>
        </values>
        <values>
            <fullName>Calling</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Long-term Nurture</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Untouched</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain</label>
        <referenceTo>Additional_Domain__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CampaignContactedTracker__c</fullName>
        <formula>If( LastActivity__c  &gt;= DATE( 2017, 2, 6),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignContactedTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConversionLog__c</fullName>
        <label>Conversion Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Source__c</fullName>
        <description>US, IRE, AU system imports</description>
        <label>Source CRM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealRegistrationDetails__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DealRegistrationNumber__c</fullName>
        <label>Deal Registration Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealRegistration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Registration</label>
        <referenceTo>DealRegistration__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisqualifiedReason__c</fullName>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad contact information</fullName>
                </value>
                <value>
                    <fullName>Do not contact</fullName>
                </value>
                <value>
                    <fullName>Feature Requests</fullName>
                </value>
                <value>
                    <fullName>Lost to competition</fullName>
                </value>
                <value>
                    <fullName>No longer with the company</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Not qualified</fullName>
                </value>
                <value>
                    <fullName>Wrong contact</fullName>
                </value>
                <value>
                    <fullName>Black listed country</fullName>
                </value>
                <value>
                    <fullName>To Contact</fullName>
                </value>
                <value>
                    <fullName>To Nurture</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <label>Disqualified Reason*</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D&amp;H</fullName>
                </value>
                <value>
                    <fullName>Lifeboat</fullName>
                </value>
                <value>
                    <fullName>Synnex</fullName>
                </value>
                <value>
                    <fullName>Tech Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotAllowBulkEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not allow Bulk E-mails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotAllowEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not allow E-mails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DomainAccountID__c</fullName>
        <formula>Additional_Domain__r.Account__r.Id</formula>
        <label>DomainAccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomainAutoConvertToContact__c</fullName>
        <formula>if(
isblank(Additional_Domain__c),
false,
Additional_Domain__r.Auto_convert_leads_into_account_contacts__c
)</formula>
        <label>DomainAutoConvertToContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>SUBSTITUTE(
  SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        LOWER(
          RIGHT(Email,LEN(Email)-FIND(&apos;@&apos;,Email))
        )
      , &quot;http://&quot;,&quot;&quot;),
    &quot;https://&quot;,&quot;&quot;),
  &quot;www.&quot;,&quot;&quot;),
&quot;/&quot;,&quot;&quot;)</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddress2__c</fullName>
        <label>E-mail Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailAddress3__c</fullName>
        <label>E-mail Address 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EstimatedRevenue__c</fullName>
        <description>Deal Reg Revenue</description>
        <label>Estimated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue__c</fullName>
        <label>Estimated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExcludeFromAutomation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExcludeFromAutomation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ext_Id_Value_Case_Insensitive__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Ext Id Value (Case-Insensitive)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Touch_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Touch Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (First Touch Campaign)</relationshipLabel>
        <relationshipName>LeadsFirstCampaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormName__c</fullName>
        <label>Form Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Comments__c</fullName>
        <description>new field request via 00005462</description>
        <label>Form Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GetRecordTypeName__c</fullName>
        <label>GetRecordTypeName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasActivity__c</fullName>
        <formula>if(isblank( LastActivity__c ),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDisqualified__c</fullName>
        <formula>If(ispickval(Status,&quot;Disqualified&quot;),TRUE,FALSE)</formula>
        <label>Is Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivity__c</fullName>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastAppointmentMSCRM__c</fullName>
        <label>MSCRM Last Appointment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastAppointment__c</fullName>
        <label>Last Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCall__c</fullName>
        <label>Last Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastEmailMSCRM__c</fullName>
        <label>MSCRM Last Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastEmail__c</fullName>
        <label>Last Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastPhoneCall__c</fullName>
        <label>Last Phone Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastTouch__c</fullName>
        <label>Last Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Touch Campaign*</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Last Touch Campaign)</relationshipLabel>
        <relationshipName>Lead_Campaign_Last</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <formula>Id</formula>
        <label>LeadID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Additional information for the Lead Source</description>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Channels__c</fullName>
        <label>Marketing Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Product_Key__c</fullName>
        <description>This is a temp field used by the Marketing Keys to allow sending of a single email (FogBugz 48025)</description>
        <inlineHelpText>Temporary Marketing Key value</inlineHelpText>
        <label>Marketing Product Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Test__c</fullName>
        <label>Marketo Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerTerritory__c</fullName>
        <formula>Owner:User.TerritoryName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>BLANKVALUE(Owner:Queue.QueueName, Owner:User.FirstName+&quot; &quot;+ Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>End User Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Clean__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)
+&quot; &quot;+
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(MobilePhone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_interested_in__c</fullName>
        <label>Product interested in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4312</fullName>
                </value>
                <value>
                    <fullName>5210</fullName>
                </value>
                <value>
                    <fullName>Both 4312 and 5210</fullName>
                </value>
                <value>
                    <fullName>Exablox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarterly_Revenue_Potential__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quarterly Revenue Potential</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent_Lead_Source_Detail__c</fullName>
        <label>Recent Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Lead_Source__c</fullName>
        <label>Recent Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>PacWest</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Canada - East</fullName>
                </value>
                <value>
                    <fullName>Canada - West</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>North Central</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResellerInterest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reseller Interest?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScribeExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ScribeExternalId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SourceCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Touch Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StcZone_Global_Region__c</fullName>
        <label>Global Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StcZone_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StcZone_Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Lead_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Test Lead Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_First_Touch__c</fullName>
        <label>Time to First Touch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Both MSP and VAR</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                    <default>true</default>
                    <label>Business User</label>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>Direct Market Reseller (DMR)</fullName>
                </value>
                <value>
                    <fullName>Distribution Partner</fullName>
                </value>
                <value>
                    <fullName>Distributors Partner Reseller</fullName>
                </value>
                <value>
                    <fullName>Home User</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Original Equipment Manufacturer (OEM)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Press / Media Evaluator</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Trial User</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller (VAR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAR_Agreement_Accepted_Date__c</fullName>
        <description>The date when the VAR Agreement was accepted.</description>
        <label>VAR Agreement Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VAR_Agreement_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the Lead accepted the VAR Agreement?</description>
        <label>VAR Agreement Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAR_Agreement_Version__c</fullName>
        <description>When the Lead accepted the VAR Agreement</description>
        <label>VAR Agreement Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadSource_m__c</fullName>
        <description>JIRA SSF-34: this field will be populated by a WFR from the  LeadSource field which is a Picklist and therefore not eligible for selection during conversion from Lead to Opportunity.</description>
        <label>Lead Source*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Lead&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCampaign_m__c</fullName>
        <description>JIRA SSF-34: this field will be populated by a WFR as Source Campaign is a Lookup field</description>
        <label>Source Campaign*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>UserType__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RATING</columns>
        <columns>mkto71_Lead_Score__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FormName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/5/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>equals</operation>
            <value>US,USA,United States</value>
        </filters>
        <filters>
            <field>UserType__c</field>
            <operation>notEqual</operation>
            <value>Home User</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
    </listViews>
</CustomObject>